src/objects/FSTR__RPA_Step_Data__c.object
<CustomObject>
    <description>Holds information related to a step that triggers a robotic process automation process or queues data to an RPA system</description>
    <fields>
        <fullName>FSTR__RPA_Action__c</fullName>
        <description>Action the step will take using RPA. Could be starting a job or queuing data.</description>
        <inlineHelpText>Action the step will take using RPA. Could be starting a job or queuing data.</inlineHelpText>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Input_Arguments__c</fullName>
        <label>Input Arguments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Process__c</fullName>
        <description>the specific process a robot should run</description>
        <inlineHelpText>the specific process a robot should run</inlineHelpText>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Provider__c</fullName>
        <description>Provider of robotic process automation services</description>
        <label>Automation Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Queue_Data__c</fullName>
        <description>data for adding to an RPA queue</description>
        <inlineHelpText>data for adding to an RPA queue</inlineHelpText>
        <label>Queue Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Queue_Priority__c</fullName>
        <label>Queue Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Queue__c</fullName>
        <description>the RPA queue data should be inserted into</description>
        <inlineHelpText>the RPA queue data should be inserted into</inlineHelpText>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RPA_Robots__c</fullName>
        <description>robots to be used when triggering a RPA job</description>
        <inlineHelpText>robots to be used when triggering a RPA job</inlineHelpText>
        <label>Robots</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <description>Step that the RPA data is associated with</description>
        <inlineHelpText>Step that the RPA data is associated with</inlineHelpText>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>RPA Step Data</relationshipLabel>
        <relationshipName>RPA_Step_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>RPA Step Data</label>
    <nameField>
        <displayFormat>RPA-{00000000}</displayFormat>
        <label>RPA Step Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RPA Step Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>